<resources>
    <string name="app_name">Now You\'re Talking</string>
    <string name="title_activity_maps">Map</string>
    <string name="title">Now\nYou\'re\nTalking</string>
    <string name="addMeetUp">Add a Meet Up</string>
    <string name="findMeetUp">Find a Meet Up</string>
    <string name="manageMeetUp">Manage Meet Ups</string>
    <string name="userProfile">User Profile</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="nameLable">Name</string>
    <string name="emailLable">Email</string>
    <string name="titleLable">Title</string>
    <string name="locationLable">Location</string>
    <string name="dateLable">Date</string>
    <string name="timeLable">Time</string>
    <string name="languageLable">Language:</string>
    <string name="minLevelLable">Minimum Level</string>
    <string name="maxLevelLable">Maximum Level</string>
    <string name="attendeesLable">No. of Attendees</string>
    <string name="noteLable">Note</string>
    <string name="dateButtonLabel">Set Date</string>
    <string name="timeButtonLable">Set Time</string>
    <string name="addMeetingButtonLabel">Add Meeting</string>
    <string name="translateHint">Enter text</string>
    <string name="translateToLabel">Translate To:</string>
    <string name="translateFromLabel">Translate From:</string>
    <string name="enter">Enter</string>
    <string name="Translation">Translation</string>
    <string name="translateLabel">Translate</string>
    <string name="Directions">Directions</string>
    <string name="Social">Social</string>
    <string name="Learn">Learn</string>
    <string name="Profile">Profile</string>
    <string name="Messages">Message</string>
    <string name="EnterMessageHint">Enter Message</string>
    <string name="Send">Send</string>
    <string name="Basics">Basics</string>
    <string name="Basics2">Basics 2</string>
    <string name="Food">Food</string>
    <string name="Phrases">Phrases</string>
    <string name="Animals">Animals</string>
    <string name="Locked">Locked</string>
    <string name="TranslateGoal">Translate this sentence:</string>
    <string name="Continue">Continue</string>
    <string name="CorrectAnswer">You are correct</string>
    <string name="WrongAnswer">That\'s not correct</string>
    <string name="Check">Check</string>
    <string name="TryAgain">Try again</string>
    <string name="EndMessageGood">Great Job</string>
    <string name="EndMessageMiddle">Really close, keep trying</string>
    <string name="EndMessageBad">Too bad, you need practice \nKeep trying</string>
    <string name="EndMessageWorst">You have a lot of practice to do!</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="SignOut">Sign Out</string>
    <string name="Message">Messages</string>
    <string name="Friends">Friends</string>
    <string name="search">Search</string>
    <string name="friendEmail">Friend\'s Email:</string>
    <string name="addFriend">Add Friend</string>
    <string name="add">add</string>
    <string name="NoConnection">Not Connected</string>
    <string name="ConnectionNeeded">An internet connection is required to use this feature</string>
    <string name="exit">Exit</string>
    <string name="speak">Speak</string>
    <string name="sayToTranslate">Say words to be translated…</string>
    <string name="speechNotSupported">Sorry! Speech recognition is not supported in this device.</string>
    <string name="remove">Remove</string>
    <string name="stats">Stats</string>
    <string name="MeetupsAttended">Meetups Attended:</string>
    <string name="NoMeetups">No meet ups scheduled</string>
    <string name="MatchTheWords">Match the words:</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="lesson">Lesson </string>
    <string name="begin">Begin</string>
    <string name="MissingGoal">Fill in the blank in this sentence:</string>
    <string name="enterWord">Enter word</string>
    <string name="TranslateImageGoal">Translate this word:</string>
    <string name="redo">Redo</string>
    <string name="Locations">Locations</string>
    <string name="Adjectives">Adjectives</string>
    <string name="Congratulations">Congratulations</string>
    <string name="Level">Level:</string>
    <string name="locked">Locked</string>
    <string name="needToComplete">Locked, complete previous activities to open</string>
    <string name="Achievements">Achievements</string>
    <string name="ChangeProfilePicture">Change Profile Picture</string>
    <string name="beginnerAchievement">Complete your first lesson</string>
    <string name="onMyWayAchievement">Reach level 5</string>
    <string name="theMasterAchievement">Master a language</string>
    <string name="meetingNewPeopleAchievement">Attend 3 meet ups</string>
    <string name="enjoyingTheCompanyAchievement">Attend 10 meet ups</string>
    <string name="nightOwlAchievement">Complete a lesson after 10:00 pm</string>
    <string name="mixItUpAchievement">Try more than one language</string>
    <string name="gettingSocialAchievement">Add a friend </string>
    <string name="speakToMeAchievement">Use the translator</string>
    <string name="earlyRiserAchievement">Complete a lesson before 8:00 am</string>
    <string name="beginnerTitle">BEGINNER</string>
    <string name="onMyWayTitle">ON MY WAY</string>
    <string name="theMasterTitle">THE MASTER</string>
    <string name="meetingNewPeopleTitle">MEETING NEW PEOPLE</string>
    <string name="enjoyingTheCompanyTitle">ENJOYING THE COMPANY</string>
    <string name="nightOwlTitle">NIGHT OWL</string>
    <string name="mixItUpTitle">MIX IT UP</string>
    <string name="gettingSocialTitle">GETTING SOCIAL</string>
    <string name="speakToMeTitle">SPEAK TO ME</string>
    <string name="earlyRiserTitle">EARLY RISER</string>
    <string name="achivementUnlocked">Achievement unlocked</string>
    <string name="details">Details</string>
    <string name="Confirm">Confirm</string>
    <string name="MyMeetUps">My Meet Ups</string>
    <string name="AttendingMeetUps">Attending Meet Ups</string>
    <string name="MyNextMeetup">My next Meet up:</string>
    <string name="German_Basics1">Mann, Frau, Junge, ich, bin, ein, eine</string>
    <string name="German_Basics2">du, bist, Kind, Madchen, und</string>
    <string name="German_Basics3">Bort, er, sie, es, ist, trinken, Wasser</string>
    <string name="German_Phrases1">hallo, tschuss, danke, bitte, ja, nine</string>
    <string name="German_Phrases2">guten morgen, guten tag, guten abend, willkommen</string>
    <string name="Spanish_Basics1">Hombre, Mujer, Chico, yo, soy, un, una</string>
    <string name="Spanish_Basics2">tu, eres, nino, nina, y</string>
    <string name="Spanish_Basics3">El pan, él, ella, es, bebida, agua</string>
    <string name="Spanish_Phrases1">hola, adios, gracias, por favor, Si, no</string>
    <string name="Spanish_Phrases2">buenos dias, buen día, buena noches, bienvenido, de nada</string>
    <string name="French_Basics1">Homme, Femme, Garçon, je, suis, un, une</string>
    <string name="French_Basics2">tu, es, enfant, fille, suis, et</string>
    <string name="French_Basics3">pain, il, elle, c\'est, buvant, eau</string>
    <string name="French_Phrases1">bonjour, Au Revoir, merci, s\'il vous plait, oui, non</string>
    <string name="French_Phrases2">bonne Matin, bonne journée, bonsoir, bienvenue</string>
    <string-array name="onetotwenty_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string-array name="twototwenty_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string-array name="language_array">
        <item>French</item>
        <item>Spanish</item>
        <item>German</item>
    </string-array>
    <string-array name="language_array_with_english">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>German</item>
    </string-array>
    <string-array name="language_array_with_english_backwards">

        <item>German</item>
        <item>Spanish</item>
        <item>French</item>
        <item>English</item>
    </string-array>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
</resources>