<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:text="@string/translateFromLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/translateFromLable"
                android:layout_marginLeft="10dp"
                android:textColor="?attr/editTextColor"
                android:textSize="18sp"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/FromLanguageSpinner"
                android:entries="@array/language_array_with_english" />

        </LinearLayout>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="5dp"
        android:ems="10"
        android:id="@+id/InputText"
        android:hint="@string/translateHint"
        android:background="@drawable/border"
        android:inputType="textMultiLine"
        />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView
            android:text="@string/translateToLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/translateToLable"
            android:layout_marginLeft="10dp"
            android:textColor="?attr/editTextColor"
            android:textSize="18sp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ToLanguageSpinner"
        android:entries="@array/language_array_with_english_backwards" />

        <Button
            android:text="@string/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/translateButton"
            android:theme="@style/ButtonStyle"
            android:layout_marginRight="20dp"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:paddingLeft="5dp"
        android:id="@+id/ResultLabel"
        android:text="@string/Translation"
        android:textColor="?attr/editTextColor"
        android:background="@drawable/border"
        android:gravity="center_vertical"
        android:textSize="17sp"
        />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_voice_search"
            android:id="@+id/SpeakButton"
            android:background="@drawable/circle_button"
            />



    </LinearLayout>


</RelativeLayout>