<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mismatched.nowyouretalking.NavbarFragment">

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/Gray" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context="com.mismatched.nowyouretalking.NavbarFragment"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <ImageButton
            android:id="@+id/SocialButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_social_selected"
            android:layout_centerHorizontal="true"
            />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/SocialButton"
                android:text="@string/Social"
                android:layout_centerHorizontal="true"
                android:textColor="@color/Black"
                android:textSize="12sp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/LearnButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_learn"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/LearnButton"
                android:text="@string/Learn"
                android:layout_centerHorizontal="true"
                android:textColor="@color/Black"
                android:textSize="12sp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/ProfileButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_profile"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ProfileButton"
                android:text="@string/Profile"
                android:layout_centerHorizontal="true"
                android:textColor="@color/Black"
                android:textSize="12sp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/MessagingActivityButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_message"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/MessagingActivityButton"
                android:text="@string/Message"
                android:layout_centerHorizontal="true"
                android:textColor="@color/Black"
                android:textSize="12sp"
                />
        </RelativeLayout>
        </LinearLayout>
    </LinearLayout>